--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,10 +1,16 @@
 <div class="container">
 
+    <button routerLink="/ajout-produit" mat-raised-button color="primary" class="mt-4">
+        <mat-icon fontIcon="add"></mat-icon>
+        AJOUTER UN NOUVEAU PRODUIT
+    </button>
+
+
     <div class="row">
 
         @for (produit of listeProduit; track $index) {
 
-        <div class="col-6">
+        <div class="col-6 mt-4">
 
             <mat-card class="example-card">
                 <mat-card-header>
@@ -12,16 +18,20 @@
                     <mat-card-title> {{produit.nom}} </mat-card-title>
                     <mat-card-subtitle>Dog Breed</mat-card-subtitle>
                 </mat-card-header>
-                <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg"
-                    alt="Photo of a Shiba Inu" />
+                <img mat-card-image src={{produit.image}} style="object-fit: cover; height: 300px;" alt="cafe" />
                 <mat-card-content>
                     <p>
                         {{produit.description}}
                     </p>
                 </mat-card-content>
                 <mat-card-actions>
-                    <button mat-button>LIKE</button>
-                    <button mat-button>SHARE</button>
+                    <button mat-raised-button color="accent">
+                        <mat-icon fontIcon="edit"></mat-icon>
+                        MODIFIER
+                    </button>
+                    <button mat-raised-button color="warn" class="ms-2" (click)="onClickSupprime(produit.id)">
+                        <mat-icon fontIcon="delete"></mat-icon>
+                        SUPPRIMER</button>
                 </mat-card-actions>
             </mat-card>
         </div>
