--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -25,7 +25,7 @@
                     </p>
                 </mat-card-content>
                 <mat-card-actions>
-                    <button mat-raised-button color="accent">
+                    <button mat-raised-button color="accent" [routerLink]="['/modifier-produit',produit.id]">
                         <mat-icon fontIcon="edit"></mat-icon>
                         MODIFIER
                     </button>
