--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,10 +14,13 @@
                     <a class="nav-link" routerLinkActive="page-actuelle" routerLink="/connexion">Connexion</a>
                 </li>
             </ul>
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+
+            <form class="d-flex" (ngSubmit)="onRecherche()">
+                <input [(ngModel)]="texteRecherche" [ngModelOptions]="{standalone: true}" class="form-control me-2"
+                    type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Recherche</button>
             </form>
+
         </div>
     </div>
 </nav>
