--- a/src/app/connexion/connexion.component.html
+++ b/src/app/connexion/connexion.component.html
@@ -1,11 +1,13 @@
-<form class="formulaire">
+<form class="formulaire" (ngSubmit)="onConnexion()" [formGroup]="formulaire">
+
     <mat-form-field>
         <mat-label>Email</mat-label>
-        <input matInput placeholder="Ex. john.doe@domain.com">
+        <input matInput formControlName="email" placeholder="Ex. john.doe@domain.com">
     </mat-form-field>
+
     <mat-form-field>
         <mat-label>Mot de passe</mat-label>
-        <input matInput type="password">
+        <input matInput formControlName="password" type="password">
     </mat-form-field>
 
     <button mat-raised-button color="primary">Se connecter</button>
