--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,17 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     flex-direction: column;
     max-width: 400px;
 }
+
+.mat-mdc-snack-bar-container {
+    &.snack-bar-valid {
+        --mdc-snackbar-container-color: rgb(59, 221, 121);
+        --mat-mdc-snack-bar-button-color: #fff;
+        --mdc-snackbar-supporting-text-color: #fff;
+    }
+
+    &.snack-bar-warning {
+        --mdc-snackbar-container-color: rgb(255, 193, 7);
+        --mat-mdc-snack-bar-button-color: #fff;
+        --mdc-snackbar-supporting-text-color: #fff;
+    }
+}
