--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,20 +8,31 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" routerLinkActive="page-actuelle" routerLink="/accueil">Accueil</a>
+                    <a class="nav-link" routerLink="/accueil" routerLinkActive="page-actuelle">Accueil</a>
+                </li>
+
+                @if(authentification.connecte) {
+
+                <li class="nav-item" style="cursor: pointer; user-select: none">
+                    <a class="nav-link" (click)="onDeconnexion()">Deconnexion</a>
+                </li>
+
+                } @else {
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/connexion" routerLinkActive="page-actuelle">Connexion</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLinkActive="page-actuelle" routerLink="/connexion">Connexion</a>
+                    <a class="nav-link" routerLink="/inscription" routerLinkActive="page-actuelle">Inscription</a>
                 </li>
+                }
             </ul>
-
             <form class="d-flex" (ngSubmit)="onRecherche()">
-                <input [(ngModel)]="texteRecherche" [ngModelOptions]="{standalone: true}" class="form-control me-2"
-                    type="search" placeholder="Search" aria-label="Search">
+                <input [(ngModel)]="texteRecherche" [ngModelOptions]="{ standalone: true }" class="form-control me-2"
+                    type="search" placeholder="Search" aria-label="Search" />
                 <button class="btn btn-outline-success" type="submit">Recherche</button>
             </form>
-
         </div>
     </div>
 </nav>
+
 <router-outlet></router-outlet>
